# Trading-Agents-and-Agents

./: .env.example  .gitignore  ARCHITECTURE.md  CTO_AUDIT_REPORT.md  Dockerfile  README.md  ROADMAP.md  aio_local.db  docker-compose.yml  preview.db  pyproject.toml
.agents/: AGENTS.md
.claude/: launch.json  settings.local.json
docs/diagrams/: architecture.mmd  classes.mmd  sequence.mmd
frontend/: package-lock.json  package.json  run-dev.sh
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CommandPalette.tsx  NotificationStack.tsx  OrgProvider.tsx  StatusBar.tsx
frontend/src/lib/: api.ts  authCookie.ts  motion.ts  orgTopology.ts  queryClient.ts  useOrgEventStream.ts
frontend/src/store/: orgStore.ts
frontend/src/types/: agents.ts  events.ts  index.ts  memory.ts  product.ts  project.ts  research.ts
logs/: aio.jsonl
scripts/: run_dev.sh
src/aio/: config.py
src/aio/actions/: __init__.py  base.py  executor.py  registry.py
src/aio/agents/: __init__.py  backend_lead.py  base.py  code_integrator.py  (+11 more)
tests/: test_actions.py  test_agents_research.py  test_api.py  test_auth.py  test_autonomy.py  test_brave_search.py  test_business.py  test_cancellation.py  test_connectors.py  test_demo_client.py  test_events.py  test_integration_handoffs.py  test_memory.py  test_memory_service.py  test_models.py  test_n8n_integration.py  test_nvidia_client.py  test_observers.py  test_obsidian_integration.py  test_openai_compat_client.py  test_orchestration.py  test_registry.py  test_resume.py  test_swarm.py
(+119 files in other folders)
